--- a/package.json
+++ b/package.json
@@ -3,25 +3,23 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"build": "react-router build",
+		"build": "cross-env NODE_ENV=production react-router build",
 		"dev": "react-router dev",
+		"start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
 		"lint": "eslint ./app",
 		"pretty": "prettier --write --ignore-unknown \"app/**/*.+(js|jsx|ts|tsx|json|css)\"",
-		"start": "react-router-serve ./build/server/index.js",
-		"tauri:build": "tauri build",
-		"tauri:dev": "tauri dev",
 		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
 		"@lexical/react": "^0.21.0",
 		"@lexical/utils": "^0.21.0",
-		"@radix-ui/react-alert-dialog": "^1.1.3",
-		"@radix-ui/react-dialog": "^1.1.3",
+		"@radix-ui/react-alert-dialog": "^1.1.4",
+		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-form": "^0.1.1",
 		"@radix-ui/react-switch": "^1.1.2",
 		"@react-pdf/renderer": "^4.1.5",
-		"@react-router/node": "7.0.2",
-		"@react-router/serve": "7.0.2",
+		"@react-router/node": "7.1.0",
+		"@react-router/serve": "7.1.0",
 		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@tauri-apps/api": "^2.1.1",
 		"@tauri-apps/plugin-dialog": "~2.2.0",
@@ -35,11 +33,11 @@
 		"framer-motion": "^11.15.0",
 		"isbot": "^5.1.18",
 		"lexical": "^0.21.0",
-		"lucide-react": "^0.468.0",
+		"lucide-react": "^0.469.0",
 		"nanoid": "^5.0.9",
-		"react": "^18.3.1",
+		"react": "^19.0.0",
 		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
-		"react-dom": "^18.3.1",
+		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss": "4.0.0-beta.2",
 		"ulid": "^2.3.0",
@@ -49,23 +47,24 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
-		"@react-router/dev": "7.0.2",
+		"@react-router/dev": "7.1.0",
 		"@tauri-apps/cli": "^2.1.0",
 		"@types/eslint__js": "^8.42.3",
-		"@types/react": "^18.3.17",
-		"@types/react-dom": "^18.3.5",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
+		"cross-env": "^7.0.3",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "5.1.0",
-		"globals": "^15.13.0",
+		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"react-router": "7.0.2",
+		"react-router": "7.1.0",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.1",
-		"vite": "^5.4.11",
+		"vite": "^6.0.5",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"engines": {
