--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -16,7 +16,5 @@
 	"tabWidth": 2,
 	"trailingComma": "all",
 	"useTabs": true,
-	"plugins": [
-		"prettier-plugin-tailwindcss"
-	]
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
