--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
 	},
 	"dependencies": {
 		"@base-ui-components/react": "1.0.0-alpha.4",
-		"@lexical/react": "^0.21.0",
-		"@lexical/utils": "^0.21.0",
+		"@portabletext/editor": "^1.18.5",
 		"@radix-ui/react-alert-dialog": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-form": "^0.1.1",
 		"@radix-ui/react-switch": "^1.1.2",
 		"@react-pdf/renderer": "^4.1.5",
-		"@react-router/node": "7.1.0",
-		"@react-router/serve": "7.1.0",
+		"@react-router/node": "^7.1.1",
+		"@react-router/serve": "^7.1.1",
 		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@tauri-apps/api": "^2.1.1",
 		"@tauri-apps/plugin-dialog": "~2.2.0",
@@ -33,13 +32,13 @@
 		"downshift": "^9.0.8",
 		"framer-motion": "^11.15.0",
 		"isbot": "^5.1.18",
-		"lexical": "^0.21.0",
 		"lucide-react": "^0.469.0",
 		"nanoid": "^5.0.9",
 		"react": "^19.0.0",
 		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
 		"react-dom": "^19.0.0",
-		"tailwind-merge": "^2.5.5",
+		"react-router": "^7.1.1",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "4.0.0-beta.2",
 		"ulid": "^2.3.0",
 		"valibot": "1.0.0-beta.9",
@@ -48,7 +47,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
-		"@react-router/dev": "7.1.0",
+		"@react-router/dev": "^7.1.1",
 		"@tauri-apps/cli": "^2.1.0",
 		"@types/eslint__js": "^8.42.3",
 		"@types/react": "^19.0.2",
@@ -58,13 +57,13 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.2",
+		"eslint-plugin-react-compiler": "19.0.0-beta-b2e8e9c-20241220",
 		"eslint-plugin-react-hooks": "5.1.0",
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"react-router": "7.1.0",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.1",
+		"typescript-eslint": "^8.18.2",
 		"vite": "^6.0.5",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
