--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
 		"tailwindcss": "4.0.0-beta.2",
 		"ulid": "^2.3.0",
 		"valibot": "1.0.0-beta.9",
-		"vite-plugin-babel": "^1.3.0",
-		"zod": "^3.24.1"
+		"vite-plugin-babel": "^1.3.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
@@ -57,6 +56,7 @@
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
+		"rollup-plugin-visualizer": "^5.13.1",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.19.0",
 		"vite": "^6.0.6",
