--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
-		"@base-ui-components/react": "1.0.0-alpha.4",
+		"@base-ui-components/react": "^1.0.0-alpha.5",
 		"@headlessui/react": "^2.2.0",
-		"@portabletext/editor": "^1.19.0",
+		"@portabletext/editor": "^1.21.1",
 		"@react-pdf/renderer": "^4.1.6",
 		"@react-router/node": "^7.1.1",
 		"@react-router/serve": "^7.1.1",
@@ -25,9 +25,9 @@
 		"@tauri-apps/plugin-store": "~2.2.0",
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.16.0",
-		"isbot": "^5.1.20",
-		"lucide-react": "^0.469.0",
+		"framer-motion": "^11.17.0",
+		"isbot": "^5.1.21",
+		"lucide-react": "^0.471.0",
 		"nanoid": "^5.0.9",
 		"react": "^19.0.0",
 		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
@@ -42,9 +42,10 @@
 	"devDependencies": {
 		"@eslint/js": "^9.17.0",
 		"@react-router/dev": "^7.1.1",
-		"@tauri-apps/cli": "^2.2.2",
+		"@tauri-apps/cli": "^2.2.3",
+		"@types/bun": "^1.1.16",
 		"@types/eslint__js": "^8.42.3",
-		"@types/react": "^19.0.3",
+		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
 		"cross-env": "^7.0.3",
 		"eslint": "^9.17.0",
@@ -57,12 +58,9 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"rollup-plugin-visualizer": "^5.14.0",
-		"typescript": "^5.7.2",
+		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.19.1",
 		"vite": "^6.0.7",
 		"vite-tsconfig-paths": "^5.1.4"
-	},
-	"engines": {
-		"node": ">=22.0.0"
 	}
 }
