--- a/package.json
+++ b/package.json
@@ -13,53 +13,52 @@
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-alpha.5",
 		"@headlessui/react": "^2.2.0",
-		"@portabletext/editor": "^1.21.1",
+		"@portabletext/editor": "^1.21.6",
 		"@react-pdf/renderer": "^4.1.6",
-		"@react-router/node": "^7.1.1",
-		"@react-router/serve": "^7.1.1",
+		"@react-router/node": "^7.1.2",
+		"@react-router/serve": "^7.1.2",
 		"@tailwindcss/vite": "4.0.0-beta.2",
 		"@tauri-apps/api": "^2.2.0",
 		"@tauri-apps/plugin-dialog": "~2.2.0",
 		"@tauri-apps/plugin-fs": "~2.2.0",
 		"@tauri-apps/plugin-sql": "~2.2.0",
 		"@tauri-apps/plugin-store": "~2.2.0",
-		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
+		"babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.17.0",
 		"isbot": "^5.1.21",
-		"lucide-react": "^0.471.0",
+		"lucide-react": "^0.471.1",
 		"nanoid": "^5.0.9",
 		"react": "^19.0.0",
-		"react-compiler-runtime": "19.0.0-beta-df7b47d-20241124",
+		"react-compiler-runtime": "^19.0.0-beta-e552027-20250112",
 		"react-dom": "^19.0.0",
-		"react-router": "^7.1.1",
+		"react-router": "^7.1.2",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "4.0.0-beta.2",
 		"ulid": "^2.3.0",
-		"valibot": "1.0.0-beta.11",
+		"valibot": "^1.0.0-beta.12",
 		"vite-plugin-babel": "^1.3.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.18.0",
-		"@react-router/dev": "^7.1.1",
+		"@react-router/dev": "^7.1.2",
 		"@tauri-apps/cli": "^2.2.4",
 		"@types/bun": "^1.1.16",
 		"@types/eslint__js": "^8.42.3",
-		"@types/react": "^19.0.4",
-		"@types/react-dom": "^19.0.2",
+		"@types/react": "^19.0.7",
+		"@types/react-dom": "^19.0.3",
 		"cross-env": "^7.0.3",
 		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-react": "^7.37.3",
-		"eslint-plugin-react-compiler": "19.0.0-beta-b2e8e9c-20241220",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
 		"eslint-plugin-react-hooks": "5.1.0",
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.9",
+		"prettier-plugin-tailwindcss": "^0.6.10",
 		"rollup-plugin-visualizer": "^5.14.0",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.19.1",
+		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.7",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
