--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-alpha.5",
 		"@headlessui/react": "^2.2.0",
-		"@portabletext/editor": "^1.23.0",
+		"@portabletext/editor": "^1.26.1",
 		"@react-pdf/renderer": "^4.1.6",
 		"@react-router/node": "^7.1.3",
 		"@react-router/serve": "^7.1.3",
-		"@tailwindcss/vite": "4.0.0-beta.2",
+		"@tailwindcss/vite": "^4.0.0",
 		"@tauri-apps/api": "^2.2.0",
 		"@tauri-apps/plugin-dialog": "~2.2.0",
 		"@tauri-apps/plugin-fs": "~2.2.0",
@@ -26,25 +26,25 @@
 		"babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
 		"clsx": "^2.1.1",
 		"isbot": "^5.1.21",
-		"lucide-react": "^0.473.0",
+		"lucide-react": "^0.474.0",
 		"nanoid": "^5.0.9",
 		"react": "^19.0.0",
 		"react-compiler-runtime": "^19.0.0-beta-e552027-20250112",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.1.3",
 		"tailwind-merge": "^2.6.0",
-		"tailwindcss": "4.0.0-beta.2",
+		"tailwindcss": "^4.0.0",
 		"ulid": "^2.3.0",
-		"valibot": "^1.0.0-beta.12",
+		"valibot": "^1.0.0-beta.14",
 		"vite-plugin-babel": "^1.3.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.18.0",
 		"@react-router/dev": "^7.1.3",
 		"@tauri-apps/cli": "^2.2.5",
-		"@types/bun": "^1.1.17",
+		"@types/bun": "^1.2.0",
 		"@types/eslint__js": "^8.42.3",
-		"@types/react": "^19.0.7",
+		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
 		"cross-env": "^7.0.3",
 		"eslint": "^9.18.0",
@@ -55,11 +55,11 @@
 		"eslint-plugin-react-hooks": "5.1.0",
 		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.10",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rollup-plugin-visualizer": "^5.14.0",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.21.0",
-		"vite": "^6.0.9",
+		"vite": "^6.0.11",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
