--- a/package.json
+++ b/package.json
@@ -11,56 +11,54 @@
 		"typecheck": "react-router typegen && tsc"
 	},
 	"dependencies": {
-		"@base-ui-components/react": "^1.0.0-alpha.7",
-		"@headlessui/react": "^2.2.1",
-		"@portabletext/editor": "^1.44.15",
+		"@base-ui-components/react": "^1.0.0-alpha.8",
+		"@headlessui/react": "^2.2.2",
+		"@portabletext/editor": "^1.49.7",
 		"@react-pdf/renderer": "^4.3.0",
-		"@react-router/node": "^7.5.0",
-		"@react-router/serve": "^7.5.0",
-		"@tailwindcss/vite": "^4.1.3",
-		"@tauri-apps/api": "^2.4.1",
+		"@react-router/node": "^7.6.0",
+		"@react-router/serve": "^7.6.0",
+		"@tailwindcss/vite": "^4.1.6",
+		"@tauri-apps/api": "^2.5.0",
 		"@tauri-apps/plugin-dialog": "~2.2.1",
 		"@tauri-apps/plugin-fs": "~2.2.1",
 		"@tauri-apps/plugin-sql": "~2.2.0",
 		"@tauri-apps/plugin-store": "~2.2.0",
-		"babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+		"babel-plugin-react-compiler": "^19.1.0-rc.1",
 		"clsx": "^2.1.1",
-		"isbot": "^5.1.25",
-		"lucide-react": "^0.487.0",
+		"isbot": "^5.1.27",
+		"lucide-react": "^0.509.0",
 		"nanoid": "^5.1.5",
 		"react": "^19.1.0",
-		"react-compiler-runtime": "^19.0.0-beta-e993439-20250328",
+		"react-compiler-runtime": "^19.1.0-rc.1",
 		"react-dom": "^19.1.0",
-		"react-router": "^7.5.0",
-		"tailwind-merge": "^3.1.0",
-		"tailwindcss": "^4.1.3",
+		"react-router": "^7.6.0",
+		"tailwind-merge": "^3.3.0",
+		"tailwindcss": "^4.1.6",
 		"ulid": "^3.0.0",
-		"valibot": "^1.0.0",
-		"vite-plugin-babel": "^1.3.0"
+		"valibot": "^1.1.0",
+		"vite-plugin-babel": "^1.3.1"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.24.0",
-		"@react-router/dev": "^7.5.0",
-		"@tauri-apps/cli": "^2.4.1",
-		"@types/bun": "^1.2.8",
+		"@eslint/js": "^9.26.0",
+		"@react-router/dev": "^7.6.0",
+		"@tauri-apps/cli": "^2.5.0",
+		"@types/bun": "^1.2.13",
 		"@types/eslint__js": "^9.14.0",
-		"@types/react": "^19.1.0",
-		"@types/react-dom": "^19.1.1",
+		"@types/react": "^19.1.3",
+		"@types/react-dom": "^19.1.3",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.24.0",
-		"eslint-config-prettier": "^10.1.1",
+		"eslint": "^9.26.0",
+		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-react": "^7.37.5",
-		"eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
-		"eslint-plugin-react-hooks": "5.2.0",
-		"globals": "^16.0.0",
+		"eslint-plugin-react-hooks": "6.0.0-rc.1",
+		"globals": "^16.1.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"react-router-devtools": "^1.1.10",
 		"rollup-plugin-visualizer": "^5.14.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.0",
-		"vite": "^6.2.5",
+		"typescript-eslint": "^8.32.0",
+		"vite": "^6.3.5",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
