--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
 	},
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-alpha.8",
-		"@headlessui/react": "^2.2.2",
-		"@portabletext/editor": "^1.49.7",
+		"@headlessui/react": "^2.2.3",
+		"@portabletext/editor": "^1.50.0",
 		"@react-pdf/renderer": "^4.3.0",
 		"@react-router/node": "^7.6.0",
 		"@react-router/serve": "^7.6.0",
-		"@tailwindcss/vite": "^4.1.6",
+		"@tailwindcss/vite": "^4.1.7",
 		"@tauri-apps/api": "^2.5.0",
 		"@tauri-apps/plugin-dialog": "~2.2.1",
 		"@tauri-apps/plugin-fs": "~2.2.1",
 		"@tauri-apps/plugin-sql": "~2.2.0",
 		"@tauri-apps/plugin-store": "~2.2.0",
-		"babel-plugin-react-compiler": "^19.1.0-rc.1",
+		"babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
 		"clsx": "^2.1.1",
-		"isbot": "^5.1.27",
-		"lucide-react": "^0.509.0",
+		"isbot": "^5.1.28",
+		"lucide-react": "^0.510.0",
 		"nanoid": "^5.1.5",
 		"react": "^19.1.0",
-		"react-compiler-runtime": "^19.1.0-rc.1",
+		"react-compiler-runtime": "^19.1.0-rc.1-rc-af1b7da-20250421",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
 		"tailwind-merge": "^3.3.0",
-		"tailwindcss": "^4.1.6",
+		"tailwindcss": "^4.1.7",
 		"ulid": "^3.0.0",
 		"valibot": "^1.1.0",
 		"vite-plugin-babel": "^1.3.1"
@@ -44,8 +44,8 @@
 		"@tauri-apps/cli": "^2.5.0",
 		"@types/bun": "^1.2.13",
 		"@types/eslint__js": "^9.14.0",
-		"@types/react": "^19.1.3",
-		"@types/react-dom": "^19.1.3",
+		"@types/react": "^19.1.4",
+		"@types/react-dom": "^19.1.5",
 		"cross-env": "^7.0.3",
 		"eslint": "^9.26.0",
 		"eslint-config-prettier": "^10.1.5",
@@ -57,7 +57,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rollup-plugin-visualizer": "^5.14.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.32.0",
+		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
