--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
 		"@electron-forge/plugin-vite": "^7.8.1",
 		"@electron/fuses": "^1.8.0",
 		"@types/electron-squirrel-startup": "^1.0.2",
+		"@types/react": "^19.1.4",
+		"@types/react-dom": "^19.1.5",
+		"@vitejs/plugin-react": "^4.4.1",
 		"electron": "36.2.1",
 		"ts-node": "^10.9.2",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.5"
 	},
 	"dependencies": {
-		"electron-squirrel-startup": "^1.0.1"
+		"electron-squirrel-startup": "^1.0.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0"
 	}
 }
